--- a/client/src/components/Nav/Nav.css
+++ b/client/src/components/Nav/Nav.css
@@ -2,11 +2,13 @@
   font-family: 'Roboto', sans-serif;
   display: flex;
   height: 120px;
-  width: 100vw;
+  width: 100%;
   background-color: black;
   color: white;
   justify-content: space-between;
   align-items: center;
+  border-bottom: 3px solid #A100FF;
+  position: fixed;
 }
 
 .nav a {
@@ -14,6 +16,10 @@
   color: white;
   margin: 0 30px;
   font-size: 24px;
+}
+
+.nav a:hover {
+  color: #6295F2;
 }
 
 .logo img {
