--- a/client/src/screens/SignUp/SignUp.css
+++ b/client/src/screens/SignUp/SignUp.css
@@ -1,14 +1,17 @@
 .signup-container {
   margin: 180px 0 80px 0;
 }
+
 .signup-container h3 {
   font-size: 40px;
   font-style: italic;
 }
+
 .first-last-name {
   display: flex;
   justify-content: center;
 }
+
 .first-last-name input {
   height: 40px;
   width: 320px;
@@ -19,9 +22,11 @@
   border-radius: 5px;
   font-size: 15px;
 }
+
 .first-last-name input:focus {
   outline-color: black;
 }
+
 .first-last-name ::placeholder {
   color: black;
 }
@@ -32,6 +37,7 @@
   justify-content: center;
   flex-direction: column;
 }
+
 .credentials input {
   height: 40px;
   width: 687px;
@@ -42,12 +48,15 @@
   border-radius: 5px;
   font-size: 15px;
 }
+
 .credentials input:focus {
   outline-color: black;
 }
+
 .credentials ::placeholder {
   color: black;
 }
+
 .create-account-btn {
   background-color: #6295f2;
   color: white;
@@ -55,8 +64,46 @@
   border-radius: 10px;
   font-size: 15px;
   font-style: italic;
-  font-family: 'Roboto', sans-serif;
+  font-family: "Roboto", sans-serif;
   width: 170px;
   height: 60px;
   margin: 20px 0 20px 0;
+  -webkit-transition: ease-out 0.4s;
+  -moz-transition: ease-out 0.4s;
+  transition: ease-out 0.4s;
+}
+
+.create-account-btn:hover {
+  cursor: pointer;
+  box-shadow: inset 400px 50px 0 0 #a100ff;
+}
+
+.signup-container .danger {
+  align-self: center;
+  background-color: #e57373;
+  color: white;
+  border: none;
+  border-radius: 10px;
+  font-size: 15px;
+  font-style: italic;
+  font-family: "Roboto", sans-serif;
+  width: 200px;
+  height: 60px;
+  margin: 20px 0 20px 0;
+  -webkit-transition: ease-out 0.4s;
+  -moz-transition: ease-out 0.4s;
+  transition: ease-out 0.4s;
+}
+
+.signup-container .danger:hover {
+  cursor: pointer;
+  box-shadow: inset 400px 50px 0 0 #6295f2;
+}
+
+.signup-container .danger:hover span {
+  display: none;
+}
+
+.signup-container .danger:hover:before {
+  content: "CREATE";
 }
