--- a/client/src/components/Nav/Nav.css
+++ b/client/src/components/Nav/Nav.css
@@ -18,6 +18,7 @@
   color: white;
   margin: 0 30px;
   font-size: 24px;
+  transition: 250ms;
 }
 
 .nav a:hover {
@@ -28,11 +29,13 @@
   width: 250px;
   margin-left: 30px;
 }
+
 .links {
   display: flex;
   margin-right: 30px;
   letter-spacing: 1px;
 }
+
 .link-welcome {
   font-size: 24px;
   margin: 0 30px;
