--- a/client/src/screens/Home/Home.css
+++ b/client/src/screens/Home/Home.css
@@ -68,6 +68,21 @@
   display: block;
 }
 
+@media only screen and (min-width: 1900px) {
+  .slogan-container {
+    top: 23%;
+    left: 70px;
+  }
+
+  .slogan-container h1 {
+    font-size: 70px;
+  }
+
+  .slogan-container h4 {
+    font-size: 27px;
+  }
+}
+
 @media only screen and (max-width: 1150px) {
   .slogan-container h1 {
     font-size: 40px;
@@ -87,7 +102,6 @@
 @media only screen and (max-width: 1080px) {
   .slogan-container {
     top: 36%;
-    left: 40px;
     padding: 15px;
   }
 
@@ -109,15 +123,14 @@
 
 @media only screen and (max-width: 750px) {
   .header-img img {
-    height: auto;
     margin-top: 120px;
   }
 
   .slogan-container {
     background-color: rgba(0, 0, 0, 0.303);
     top: 10%;
-    left: 50px;
-    right: 50px;
+    left: 160px;
+    right: 160px;
     align-items: center;
     text-align: center;
     display: flex;
@@ -160,6 +173,20 @@
   }
 }
 
+@media only screen and (max-width: 690px) {
+  .slogan-container {
+    left: 100px;
+    right: 100px;
+  }
+}
+
+@media only screen and (max-width: 570px) {
+  .slogan-container {
+    left: 60px;
+    right: 60px;
+  }
+}
+
 @media only screen and (max-width: 470px) {
   .slogan-container h1 {
     font-size: 30px;
@@ -168,13 +195,12 @@
 
 @media only screen and (max-width: 435px) {
   .slogan-container {
-    width: 250px;
-    left: 20px;
-    right: 20px;
+    left: 40px;
+    right: 40px;
   }
   .slogan-container h1 {
     margin: 0;
-    font-size: 20px;
+    font-size: 30px;
   }
 
   .slogan-container h4 {
@@ -187,5 +213,39 @@
     width: 80px;
     height: 30px;
     font-size: 12px;
+  }
+}
+
+@media only screen and (max-width: 395px) {
+  .slogan-container {
+    left: 25px;
+    right: 25px;
+  }
+}
+
+@media only screen and (max-width: 355px) {
+  .slogan-container {
+    left: 10px;
+    right: 10px;
+  }
+
+  .slogan-container h1 {
+    font-size: 25px;
+  }
+}
+
+@media only screen and (max-width: 335px) {
+  .slogan-container h1 {
+    font-size: 18px;
+  }
+
+  .slogan-container h4 {
+    font-size: 10px;
+  }
+
+  .shop-now-btn {
+    width: 80px;
+    height: 23px;
+    font-size: 10px;
   }
 }
