--- a/client/src/components/Sort/Sort.css
+++ b/client/src/components/Sort/Sort.css
@@ -1,6 +1,7 @@
 .sort-container {
   display: flex;
   justify-content: flex-end;
+  align-items: center;
   width: 92.75vw;
   margin: 20px;
 }
@@ -10,6 +11,11 @@ label {
   font-family: "Roboto", sans-serif;
   font-weight: bold;
   padding-right: 10px;
+  color: black;
+}
+
+.sort {
+  color: black;
 }
 
 select {
@@ -27,5 +33,9 @@ select:focus {
     width: 100%;
     justify-content: center;
     margin: 0px;
+  }
+
+  label {
+    padding-right: 5px;
   }
 }
