--- a/client/src/screens/Home/Home.css
+++ b/client/src/screens/Home/Home.css
@@ -84,9 +84,9 @@
 }
 
 @media only screen and (max-width: 1150px) {
-  .slogan-container h1 {
-    font-size: 40px;
-    width: 385px;
+  .header-img img {
+    height: 600px;
+    object-fit: cover;
   }
 
   .slogan-container h4 {
@@ -106,16 +106,11 @@
   }
 
   .slogan-container h1 {
-    font-size: 30px;
-    width: 310px;
-  }
-
-  .slogan-container h4 {
-    font-size: 15px;
+    font-size: 44.5px;
   }
 
   .shop-now-btn {
-    width: 100px;
+    width: 120px;
     height: 45px;
     font-size: 13px;
   }
@@ -124,13 +119,14 @@
 @media only screen and (max-width: 750px) {
   .header-img img {
     margin-top: 120px;
+    height: 400px;
+    object-fit: cover;
   }
 
   .slogan-container {
-    background-color: rgba(0, 0, 0, 0.303);
     top: 10%;
-    left: 160px;
-    right: 160px;
+    left: 120px;
+    right: 120px;
     align-items: center;
     text-align: center;
     display: flex;
@@ -139,18 +135,11 @@
   }
 
   .slogan-container h1 {
-    font-size: 32px;
     margin-top: 10px;
-  }
-
-  .slogan-container h4 {
-    font-size: 15px;
-    margin-top: 12px;
   }
 
   .shop-now-btn {
     margin-bottom: 10px;
-    width: 90px;
     height: 40px;
     font-size: 13px;
   }
@@ -178,74 +167,138 @@
     left: 100px;
     right: 100px;
   }
+
+  .slogan-container h1 {
+    font-size: 35px;
+  }
 }
 
 @media only screen and (max-width: 570px) {
+  .header-img img {
+    height: 365px;
+    object-fit: cover;
+  }
+
   .slogan-container {
+    top: 15%;
     left: 60px;
     right: 60px;
+  }
+
+  .slogan-container h1 {
+    font-size: 33px;
+  }
+
+  .body-imgs-link {
+    display: flex;
+    flex-direction: column;
+    width: 100%;
   }
 }
 
 @media only screen and (max-width: 470px) {
-  .slogan-container h1 {
-    font-size: 30px;
+  .header-img img {
+    height: 310px;
   }
-}
 
-@media only screen and (max-width: 435px) {
   .slogan-container {
     left: 40px;
     right: 40px;
   }
+}
+
+@media only screen and (max-width: 440px) {
+  .header-img img {
+    height: 300px;
+  }
+
+  .slogan-container {
+    left: 35px;
+    right: 35px;
+  }
+
   .slogan-container h1 {
-    margin: 0;
-    font-size: 30px;
+    margin: 7px 0 2px 0;
   }
 
   .slogan-container h4 {
-    font-size: 12px;
+    font-size: 17px;
     margin-top: 10px;
   }
 
   .shop-now-btn {
-    margin: 0;
-    width: 80px;
-    height: 30px;
-    font-size: 12px;
+    margin: 2px 0 10px 0;
+    height: 45px;
+  }
+}
+
+@media only screen and (max-width: 423px) {
+  .slogan-container {
+    left: 20px;
+    right: 20px;
   }
 }
 
 @media only screen and (max-width: 395px) {
+  .header-img img {
+    height: 265px;
+  }
+
   .slogan-container {
-    left: 25px;
-    right: 25px;
+    left: 15px;
+    right: 15px;
+  }
+
+  .slogan-container h1 {
+    margin: 2px 0;
+    font-size: 30px;
+  }
+
+  .slogan-container h4 {
+    font-size: 14px;
+  }
+
+  .shop-now-btn {
+    height: 40px;
+    font-size: 12px;
   }
 }
 
 @media only screen and (max-width: 355px) {
+  .header-img img {
+    height: 235px;
+  }
+
   .slogan-container {
+    top: 10%;
     left: 10px;
     right: 10px;
   }
 
   .slogan-container h1 {
-    font-size: 25px;
+    font-size: 29px;
+  }
+
+  .slogan-container h4 {
+    font-size: 12px;
   }
 }
 
 @media only screen and (max-width: 335px) {
-  .slogan-container h1 {
-    font-size: 18px;
+  .header-img img {
+    height: 220px;
   }
 
-  .slogan-container h4 {
-    font-size: 10px;
+  .slogan-container {
+    left: 5px;
+    right: 5px;
+  }
+
+  .slogan-container h1 {
+    font-size: 25px;
   }
 
   .shop-now-btn {
-    width: 80px;
-    height: 23px;
-    font-size: 10px;
+    height: 35px;
   }
 }
