--- a/client/src/screens/SignIn/SignIn.css
+++ b/client/src/screens/SignIn/SignIn.css
@@ -43,7 +43,7 @@
   border-radius: 10px;
   font-size: 15px;
   font-style: italic;
-  font-family: "Roboto", sans-serif;
+  font-family: 'Roboto', sans-serif;
   width: 170px;
   height: 60px;
   margin: 20px 0 20px 0;
@@ -73,7 +73,7 @@
   border-radius: 10px;
   font-size: 15px;
   font-style: italic;
-  font-family: "Roboto", sans-serif;
+  font-family: 'Roboto', sans-serif;
   width: 350px;
   height: 60px;
   margin: 20px 0 20px 0;
@@ -95,7 +95,7 @@
   border-radius: 10px;
   font-size: 15px;
   font-style: italic;
-  font-family: "Roboto", sans-serif;
+  font-family: 'Roboto', sans-serif;
   width: 200px;
   height: 60px;
   margin: 20px 0 20px 0;
@@ -114,5 +114,62 @@
 }
 
 .signin-container .danger:hover:before {
-  content: "SIGN IN";
+  content: 'SIGN IN';
+}
+
+@media only screen and (max-width: 1070px) {
+  .signin-container {
+    display: flex;
+    flex-direction: column;
+    /* flex-flow: row wrap; */
+    justify-content: center;
+  }
+  .signup-container {
+    margin-top: 40px;
+  }
+  .signup-container h3 {
+    font-size: 40px;
+  }
+}
+
+@media only screen and (max-width: 750px) {
+  .signin-container {
+    /* display: flex;
+    flex-direction: row;
+    justify-content: center; */
+  }
+  .signin-form-container h3 {
+    font-size: 30px;
+  }
+  .signup-container h3 {
+    font-size: 30px;
+  }
+
+  .new-customer-btn {
+    width: 170px;
+    height: 60px;
+    margin: 20px 0 20px 0;
+  }
+}
+
+@media only screen and (max-width: 550px) {
+  .signin-form-container h3 {
+    font-size: 24px;
+  }
+  .signup-container h3 {
+    font-size: 24px;
+  }
+  .signin-form-container input {
+    width: 360px;
+  }
+  .new-customer-btn {
+    width: 170px;
+    height: 60px;
+    margin: 20px 0 20px 0;
+  }
+}
+@media only screen and (max-width: 450px) {
+  .signin-form-container input {
+    width: 300px;
+  }
 }
