--- a/client/src/screens/ProductCreate/ProductCreate.css
+++ b/client/src/screens/ProductCreate/ProductCreate.css
@@ -64,3 +64,38 @@ textarea:focus {
   cursor: pointer;
   box-shadow: inset 400px 50px 0 0 #a100ff;
 }
+
+@media only screen and (max-width: 570px) {
+  
+  .add-product-container h2 {
+    font-size: 36px;
+  }
+  
+  .add-product-container input {
+    width: 360px;
+  }
+  
+  .add-product-container textarea {
+    width: 360px;
+  }
+}
+
+@media only screen and (max-width: 470px) {
+  .add-product-container input {
+    width: 300px;
+  }
+  
+  .add-product-container textarea {
+    width: 300px;
+  }
+}
+
+@media only screen and (max-width: 375px) {
+  .add-product-container input {
+    width: 220px;
+  }
+  
+  .add-product-container textarea {
+    width: 220px;
+  }
+}
