--- a/client/src/screens/ProductEdit/ProductEdit.css
+++ b/client/src/screens/ProductEdit/ProductEdit.css
@@ -81,25 +81,21 @@ textarea:focus {
 }
 
 @media only screen and (max-width: 470px) {
+  .product-edit input {
+    width: 300px;
+  }
   
+  .product-edit textarea {
+    width: 300px;
+  }
 }
 
-@media only screen and (max-width: 440px) {
+@media only screen and (max-width: 375px) {
+  .product-edit input {
+    width: 220px;
+  }
   
-}
-
-@media only screen and (max-width: 423px) {
- 
-}
-
-@media only screen and (max-width: 395px) {
-  
-}
-
-@media only screen and (max-width: 355px) {
-  
-}
-
-@media only screen and (max-width: 335px) {
- 
+  .product-edit textarea {
+    width: 220px;
+  }
 }
