--- a/client/src/components/Nav/Nav.css
+++ b/client/src/components/Nav/Nav.css
@@ -1,5 +1,5 @@
 .nav {
-  font-family: 'Roboto', sans-serif;
+  font-family: "Roboto", sans-serif;
   display: flex;
   height: 120px;
   width: 100%;
@@ -40,22 +40,174 @@
   font-size: 24px;
   margin: 0 30px;
 }
-@media only screen and (max-width: 950px) {
-  .logo img {
-    width: 180px;
+
+.hamburger {
+  display: none;
+}
+
+@media only screen and (min-width: 1900px) {
+  .nav {
+    height: 140px;
   }
 }
 
-@media only screen and (max-width: 770px) {
+@media screen and (max-width: 1150px) {
+  .logo img {
+    width: 220px;
+    margin-left: 20px;
+  }
+
+  .nav a {
+    font-size: 20px;
+  }
+
+  .link-welcome {
+    font-size: 20px;
+  }
+}
+
+@media screen and (max-width: 1040px) {
+  .logo img {
+    width: 200px;
+  }
+
+  .nav a {
+    font-size: 18px;
+  }
+
+  .link-welcome {
+    font-size: 18px;
+  }
+}
+
+@media screen and (max-width: 975px) {
+  .hamburger {
+    display: contents;
+  }
+
+  .links {
+    display: none;
+  }
+}
+
+/* @media screen and (max-width: 980px) {
+  .logo img {
+    width: 190px;
+  }
+
+  .nav a {
+    margin: 0 20px;
+  }
+
+  .link-welcome {
+    margin: 0 20px;
+  }
+}
+
+@media screen and (max-width: 865px) {
+  .logo img {
+    width: 170px;
+    margin-left: 10px;
+  }
+
+  .nav a {
+    margin: 0 20px;
+    font-size: 15px;
+  }
+
+  .link-welcome {
+    margin: 0 20px;
+    font-size: 15px;
+  }
+}
+
+@media screen and (max-width: 760px) {
+  .links {
+    flex-direction: row;
+    flex-wrap: wrap;
+    justify-content: center;
+  }
+
+  .logo img {
+    width: 160px;
+    margin-left: 10px;
+  }
+
+  .nav a {
+    font-size: 14px;
+    margin: 0 10px;
+  }
+
+  .link-welcome {
+    font-size: 14px;
+    margin: 0 10px;
+  }
+}
+
+@media screen and (max-width: 650px) {
+  .nav {
+    align-items: flex-start;
+    text-align: right;
+  }
+
+  .nav a {
+    font-size: 15px;
+    margin: 3px 0px;
+  }
+
+  .link-welcome {
+    font-size: 15px;
+    margin: 3px 0px;
+  }
+
+  .logo img {
+    width: 200px;
+    margin: 10px 0px 20px 20px;
+  }
+} */
+
+/* @media screen and (max-width: 430px) {
+  .logo img {
+    width: 170px;
+  }
+
+  .nav a {
+    font-size: 12px;
+  }
+
+  .link-welcome {
+    font-size: 12px;
+  }
+}
+
+@media screen and (max-width: 380px) {
   .logo img {
     width: 150px;
   }
-  /* .nav {
+}
+
+@media screen and (max-width: 355px) {
+  .logo img {
+    width: 120px;
+  }
+} */
+
+/* @media only screen and (max-width: 950px) {
+  .logo img {
+    width: 180px;
+  }
+} */
+
+/* @media only screen and (max-width: 770px) {
+  .logo img {
+    width: 150px;
+  } */
+/* .nav {
     display: flex;
     flex-direction: column;
   } */
-  .links {
+/* .links {
     display: flex;
     flex-direction: column;
   }
-}
+} */
