--- a/client/src/screens/ProductDetail/ProductDetail.css
+++ b/client/src/screens/ProductDetail/ProductDetail.css
@@ -2,62 +2,94 @@
   display: flex;
   padding: 100px;
   margin-top: 120px;
+  justify-content: center;
 }
+
 .detail-img {
-  margin: 0px 70px;
+  margin: 0px 50px 0 0;
 }
+
 .detail-img img {
-  width: 500px;
+  width: 40vw;
+  max-width: 500px;
   border-radius: 5px;
 }
+
 .detail {
   display: flex;
   flex-direction: column;
   text-align: left;
-  margin: 0 70px 0px 0;
+  margin: 0 0 50px 0;
+  width: 40vw;
 }
+
 .name {
   font-size: 40px;
 }
+
 .price {
   font-size: 24px;
 }
+
 .description {
   font-size: 20px;
   letter-spacing: 1;
   margin: 0 0 10px 0;
 }
+
 .overview {
   font-size: 24px;
   margin: 5px 0;
 }
+
 .email {
   font-size: 20px;
   letter-spacing: 1;
   margin: 20px 0 40px 0;
 }
+
 .button-container {
   display: flex;
   justify-content: flex-end;
 }
+
 .edit-button {
   text-decoration: none;
   color: black;
   margin: 10px;
   font-size: 30px;
 }
+
 .edit-button:hover {
   transform: scale(1.1);
   transition-duration: 0.3s;
   cursor: pointer;
 }
+
 .delete-button {
   color: black;
   margin: 10px;
   font-size: 28px;
 }
+
 .delete-button:hover {
   transform: scale(1.1);
   transition-duration: 0.3s;
   cursor: pointer;
+}
+
+@media only screen and (max-width: 900px) {
+  .product-detail {
+    display: flex;
+    flex-direction: column;
+  }
+
+  .detail-img {
+    margin: 50px 0 0 0;
+  }
+
+  .detail {
+    margin: 50px 0 0 0;
+    text-align: center;
+  }
 }
