--- a/client/src/screens/SignIn/SignIn.css
+++ b/client/src/screens/SignIn/SignIn.css
@@ -57,11 +57,11 @@
   box-shadow: inset 400px 50px 0 0 #a100ff;
 }
 
-.signup-container {
+.signup-container-create {
   margin-bottom: 190px;
 }
 
-.signup-container h3 {
+.signup-container-create h3 {
   font-size: 22px;
 }
 
@@ -123,11 +123,12 @@
     flex-direction: column;
     justify-content: center;
   }
-  .signup-container {
-    margin-top: 40px;
+  .signup-container-create {
+    margin-top: 0;
   }
-  .signup-container h3 {
+  .signup-container-create h3 {
     font-size: 40px;
+    margin-top: 40px;
   }
 }
 
@@ -135,7 +136,8 @@
   .signin-form-container h3 {
     font-size: 30px;
   }
-  .signup-container h3 {
+
+  .signup-container-create h3 {
     font-size: 30px;
   }
   .new-customer-btn {
@@ -149,7 +151,10 @@
   .signin-form-container h3 {
     font-size: 24px;
   }
-  .signup-container h3 {
+  .signup-container-create {
+    margin-bottom: 0;
+  }
+  .signup-container-create h3 {
     font-size: 24px;
   }
   .signin-form-container input {
@@ -164,5 +169,11 @@
 @media only screen and (max-width: 450px) {
   .signin-form-container input {
     width: 300px;
+  }
+}
+
+@media only screen and (max-width: 375px) {
+  .signin-form-container input {
+    width: 220px;
   }
 }
