--- a/client/src/components/Nav/Nav.css
+++ b/client/src/components/Nav/Nav.css
@@ -10,7 +10,6 @@
   border-bottom: 3px solid #a100ff;
   position: fixed;
   top: 0;
-  z-index: 5;
 }
 
 .nav a {
@@ -80,7 +79,7 @@
   }
 }
 
-@media screen and (max-width: 975px) {
+@media screen and (max-width: 1000px) {
   .hamburger {
     display: contents;
   }
@@ -90,124 +89,8 @@
   }
 }
 
-/* @media screen and (max-width: 980px) {
+@media screen and (max-width: 700px) {
   .logo img {
-    width: 190px;
-  }
-
-  .nav a {
-    margin: 0 20px;
-  }
-
-  .link-welcome {
-    margin: 0 20px;
+    margin-left: 0.1%;
   }
 }
-
-@media screen and (max-width: 865px) {
-  .logo img {
-    width: 170px;
-    margin-left: 10px;
-  }
-
-  .nav a {
-    margin: 0 20px;
-    font-size: 15px;
-  }
-
-  .link-welcome {
-    margin: 0 20px;
-    font-size: 15px;
-  }
-}
-
-@media screen and (max-width: 760px) {
-  .links {
-    flex-direction: row;
-    flex-wrap: wrap;
-    justify-content: center;
-  }
-
-  .logo img {
-    width: 160px;
-    margin-left: 10px;
-  }
-
-  .nav a {
-    font-size: 14px;
-    margin: 0 10px;
-  }
-
-  .link-welcome {
-    font-size: 14px;
-    margin: 0 10px;
-  }
-}
-
-@media screen and (max-width: 650px) {
-  .nav {
-    align-items: flex-start;
-    text-align: right;
-  }
-
-  .nav a {
-    font-size: 15px;
-    margin: 3px 0px;
-  }
-
-  .link-welcome {
-    font-size: 15px;
-    margin: 3px 0px;
-  }
-
-  .logo img {
-    width: 200px;
-    margin: 10px 0px 20px 20px;
-  }
-} */
-
-/* @media screen and (max-width: 430px) {
-  .logo img {
-    width: 170px;
-  }
-
-  .nav a {
-    font-size: 12px;
-  }
-
-  .link-welcome {
-    font-size: 12px;
-  }
-}
-
-@media screen and (max-width: 380px) {
-  .logo img {
-    width: 150px;
-  }
-}
-
-@media screen and (max-width: 355px) {
-  .logo img {
-    width: 120px;
-  }
-} */
-
-/* @media only screen and (max-width: 950px) {
-  .logo img {
-    width: 180px;
-  }
-} */
-
-/* @media only screen and (max-width: 770px) {
-  .logo img {
-    width: 150px;
-  } */
-/* .nav {
-    display: flex;
-    flex-direction: column;
-  } */
-/* .links {
-    display: flex;
-    flex-direction: column;
-  }
-} */
