--- a/client/src/screens/SignUp/SignUp.css
+++ b/client/src/screens/SignUp/SignUp.css
@@ -13,8 +13,8 @@
 }
 
 .first-last-name input {
-  height: 40px;
-  width: 320px;
+  height: 60px;
+  width: 334px;
   margin: 10px;
   padding: 10px 10px 10px 15px;
   background-color: rgb(209, 209, 209);
@@ -39,7 +39,7 @@
 }
 
 .credentials input {
-  height: 40px;
+  height: 60px;
   width: 687px;
   margin: 10px;
   padding: 10px 10px 10px 15px;
@@ -110,10 +110,7 @@
 
 @media only screen and (max-width: 1070px) {
   .signup-container {
-    margin-top: 180px;
-  }
-  .signup-container h3 {
-    margin-top: 180px;
+    margin-bottom: 180px;
   }
   .first-last-name {
     display: flex;
@@ -124,9 +121,7 @@
   .first-last-name input {
     width: 550px;
   }
-  .signin-container {
-    display: flex;
-  }
+
   .credentials input {
     width: 550px;
   }
@@ -152,7 +147,9 @@
   .first-last-name input {
     width: 220px;
   }
-
+  .signup-container h3 {
+    font-size: 28px;
+  }
   .credentials input {
     width: 220px;
   }
