--- a/client/src/components/Footer/Footer.css
+++ b/client/src/components/Footer/Footer.css
@@ -54,21 +54,33 @@
   margin: 20px 0;
 }
 
+.footer-imgs {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
 .footer-logo {
   width: 150px;
   margin-right: 20px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
 .footer-github {
   width: 50px;
   margin-left: 20px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
 @media only screen and (max-width: 690px) {
   .team-container p {
     font-size: 18px;
   }
-  
+
   .team-container a {
     margin: 15px 0;
   }
@@ -81,7 +93,7 @@
   .sitemap p {
     font-size: 18px;
   }
-  
+
   .sitemap a {
     margin: 15px 0;
   }
@@ -90,7 +102,7 @@
     width: 140px;
     margin-right: 20px;
   }
-  
+
   .footer-github {
     width: 40px;
     margin-left: 20px;
@@ -125,12 +137,11 @@
     width: 130px;
     margin-right: 18px;
   }
-  
+
   .footer-github {
     width: 30px;
     margin-left: 18px;
   }
-  
 }
 
 @media only screen and (max-width: 470px) {
@@ -138,7 +149,7 @@
     font-size: 14px;
   }
 
- .team-container a {
+  .team-container a {
     font-size: 12px;
   }
 
@@ -159,7 +170,7 @@
     width: 110px;
     margin-right: 14px;
   }
-  
+
   .footer-github {
     margin-left: 14px;
   }
@@ -170,7 +181,7 @@
     font-size: 12px;
   }
 
- .team-container a {
+  .team-container a {
     font-size: 10px;
   }
 
@@ -190,7 +201,7 @@
   .footer-logo {
     margin: 0 auto;
   }
-  
+
   .footer-github {
     margin: 5px auto;
   }
@@ -199,21 +210,20 @@
 @media only screen and (max-width: 355px) {
   .team-container {
     width: 100px;
-
   }
-  
+
   .team-container p {
     margin-left: 32px;
     font-size: 8px;
   }
 
- .team-container a {
+  .team-container a {
     margin-right: 16px;
     font-size: 8px;
   }
 
   .made-by-devs {
-    margin-left: 22px
+    margin-left: 22px;
   }
 
   .made-by-devs p {
@@ -240,7 +250,7 @@
     margin-bottom: 10px;
     margin-left: auto;
   }
-  
+
   .footer-github {
     width: 20px;
     margin: 0 auto;
