--- a/client/src/screens/ProductDetail/ProductDetail.css
+++ b/client/src/screens/ProductDetail/ProductDetail.css
@@ -109,7 +109,7 @@
   }
 
   .detail {
-    margin: 40px 40px 0 40px;
+    margin: 40px;
     text-align: center;
     width: unset;
   }
@@ -129,7 +129,7 @@
   }
 
   .detail {
-    margin: 40px 50px 0 40px;
+    margin: 40px 50px 40px 50px;
   }
 }
 
