--- a/client/src/screens/ProductDetail/ProductDetail.css
+++ b/client/src/screens/ProductDetail/ProductDetail.css
@@ -1,11 +1,11 @@
-.loading-div h1 {
-  margin-top: 150px;
+.loading-div {
+  margin-top: 100px;
 }
 
 .product-detail {
   display: flex;
   margin-top: 40px;
-  padding: 100px;
+  padding: 70px 100px 70px 100px;
   justify-content: center;
 }
 
@@ -23,7 +23,7 @@
   display: flex;
   flex-direction: column;
   text-align: left;
-  margin: 0 0 50px 0;
+  margin: 0 0 65px 0;
   width: 40vw;
   min-width: 175px;
 }
@@ -109,7 +109,7 @@
   }
 
   .detail {
-    margin: 40px;
+    margin: 40px 40px 65px 40px ;
     text-align: center;
     width: unset;
   }
@@ -129,7 +129,7 @@
   }
 
   .detail {
-    margin: 40px 50px 40px 50px;
+    margin: 40px 50px 65px 50px;
   }
 }
 
