--- a/client/src/screens/ProductDetail/ProductDetail.css
+++ b/client/src/screens/ProductDetail/ProductDetail.css
@@ -1,11 +1,12 @@
-.loading-div {
-  margin-top: 100px;
+.loading-details {
+  margin: 150px 0 100px 0;
 }
 
 .product-detail {
   display: flex;
   margin-top: 40px;
   padding: 70px 100px 70px 100px;
+  margin-top: 110px;
   justify-content: center;
 }
 
@@ -23,7 +24,6 @@
   display: flex;
   flex-direction: column;
   text-align: left;
-  margin: 0 0 65px 0;
   width: 40vw;
   min-width: 175px;
 }
