--- a/client/src/components/Footer/Footer.css
+++ b/client/src/components/Footer/Footer.css
@@ -120,7 +120,7 @@
   }
 
   .made-by-devs p {
-    margin: 33px 0;
+    margin: 20px 0;
     font-size: 20px;
   }
 
@@ -154,7 +154,7 @@
   }
 
   .made-by-devs p {
-    margin: 30px 0;
+    margin: 20px 5px;
     font-size: 16px;
   }
 
@@ -168,15 +168,45 @@
 
   .footer-logo {
     width: 110px;
-    margin-right: 14px;
+    margin: auto;
   }
 
   .footer-github {
-    margin-left: 14px;
+    margin: 7px auto;
+  }
+
+  .footer-imgs {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-content: center;
   }
 }
 
 @media only screen and (max-width: 395px) {
+  .team-container {
+    width: 110px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+  }
+  .sitemap {
+    width: 110px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+  }
+
+  .made-by-devs {
+    width: 110px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+  }
+
   .team-container p {
     font-size: 12px;
   }
@@ -186,8 +216,7 @@
   }
 
   .made-by-devs p {
-    margin: 30px auto;
-    font-size: 12px;
+    font-size: 14px;
   }
 
   .sitemap p {
@@ -201,10 +230,6 @@
   .footer-logo {
     margin: 0 auto;
   }
-
-  .footer-github {
-    margin: 5px auto;
-  }
 }
 
 @media only screen and (max-width: 355px) {
@@ -213,31 +238,24 @@
   }
 
   .team-container p {
-    margin-left: 32px;
-    font-size: 8px;
+    font-size: 10px;
   }
 
   .team-container a {
-    margin-right: 16px;
     font-size: 8px;
-  }
-
-  .made-by-devs {
-    margin-left: 22px;
   }
 
   .made-by-devs p {
-    margin: 26px auto 16px auto;
-    font-size: 8px;
+    font-size: 12px;
+    margin: 10px 0;
   }
 
   .sitemap {
     width: 100px;
-    margin-right: 20px;
   }
 
   .sitemap p {
-    font-size: 8px;
+    font-size: 10px;
   }
 
   .sitemap a {
